--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
+
 
 .no-scrollbar {
   -ms-overflow-style: none;  /* IE and Edge */
@@ -7,4 +9,9 @@
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;             /* Chrome, Safari and Opera */
+}
+
+
+@theme {
+  --default-font-family: "Inter", sans-serif;
 }
